--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "wouter": "^2.11.0",
