--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.45.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "wouter": "^2.11.0",
