--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-js-pagination": "^3.0.3",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "redux-persist": "^6.0.0",
