--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
