--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
@@ -48,6 +49,7 @@
     "@types/node": "^20.3.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lazy-load-image-component": "^1.5.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
