--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "braintree-web": "^3.96.1",
+    "braintree-web-drop-in": "^1.39.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "lodash.debounce": "^4.0.8",
@@ -45,6 +47,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/braintree-web-drop-in": "^1.34.3",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^20.3.3",
     "@types/react": "^18.0.37",
