--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -52,6 +52,9 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.6.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/braintree-web-drop-in": "^1.34.3",
     "@types/jest": "^29.5.3",
     "@types/lodash.debounce": "^4.0.7",
@@ -68,8 +71,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.6.2",
+    "msw": "^1.2.3",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
