--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -75,6 +75,7 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
