--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -32,6 +32,7 @@
     "braintree-web-drop-in": "^1.39.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "jest-environment-jsdom": "^29.6.2",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
