--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.4.0",
     "braintree-web": "^3.96.1",
     "braintree-web-drop-in": "^1.39.1",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "jest-environment-jsdom": "^29.6.2",
