--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -37,6 +37,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
+    "react-beforeunload": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-lazy-load-image-component": "^1.6.0",
@@ -62,6 +63,7 @@
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^20.3.3",
     "@types/react": "^18.0.37",
+    "@types/react-beforeunload": "^2.1.1",
     "@types/react-dom": "^18.0.11",
     "@types/react-lazy-load-image-component": "^1.5.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
