--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "axios": "^1.4.0",
     "braintree-web": "^3.96.1",
     "braintree-web-drop-in": "^1.39.1",
@@ -35,7 +36,7 @@
     "clsx": "^1.2.1",
     "easyinvoice": "^3.0.23",
     "framer-motion": "^10.15.1",
-    "jest-environment-jsdom": "^29.6.2",
+    "jest-transform-stub": "^2.0.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
@@ -53,11 +54,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-typescript": "^7.22.5",
-    "@jest/globals": "^29.6.2",
-    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/braintree-web-drop-in": "^1.34.3",
@@ -72,11 +68,11 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
-    "babel-jest": "^29.6.2",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "msw": "^1.2.3",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
