--- a/coral-ecommerce-api/composer.json
+++ b/coral-ecommerce-api/composer.json
@@ -10,6 +10,7 @@
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/telescope": "^4.16",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
